--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "seed": "node seeds/seed.js",
     "watch": "nodemon server.js"
   },
   "keywords": [],
@@ -12,12 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "express": "^4.17.2",
+    "graphql": "^16.3.0",
+    "apollo-server-express": "^3.6.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^5.9.10"
+    "mongoose": "^6.1.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.6"
   }
 }
